use sling 8 launchpad